--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
-  font-family: "Montserrat";
+  font-family: "Roboto";
   background-color: white;
   margin: 0;
   padding: 0;
@@ -309,11 +309,13 @@ form.avis:hover {
 }
 
 form.contact {
-  background-color: #fff;
   padding: 49px;
   cursor: pointer;
   border-radius: 10px;
   box-shadow: 1px 0px 20px 20px #d9f0ff;
+  transition: background-image 0.6s ease, transform 0.3s ease,
+    box-shadow 0.4s ease;
+  transform: scale(1);
 }
 
 form.contact:hover {
@@ -322,6 +324,8 @@ form.contact:hover {
     #d9f0ff 52.5%,
     #d9f0ff 100%
   );
+  transform: scale(1.02);
+  box-shadow: 1px 0px 30px 25px #d9f0ff;
 }
 
 form input[type="text"] {
@@ -332,6 +336,7 @@ form input[type="text"] {
   border-radius: 5px;
   margin-left: 0rem;
   background-color: white;
+  outline: none;
 }
 
 form button {
@@ -637,6 +642,7 @@ h2 {
   font-size: 14px;
   border: 1px solid #7db8e0;
   border-radius: 4px;
+  outline: none;
 }
 
 button {
@@ -1144,11 +1150,31 @@ nav,
 }
 
 .project-link {
- display: none;
+  display: inline-block;
+  padding: 10px 20px;
+  font-size: 16px;
+  font-weight: 600;
+  text-align: center;
+  text-decoration: none;
+  background-color: #007bff;
+  color: white;
+  border: 2px solid #007bff;
+  border-radius: 5px;
+  transition: all 0.3s ease;
 }
 
 .project-link:hover {
   background-color: #0056b3;
+  border-color: #0056b3;
+  transform: translateY(
+    -2px
+  ); /* Légère remontée du bouton pour un effet interactif */
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Ombre portée pour ajouter de la profondeur */
+}
+
+.project-link:active {
+  transform: translateY(1px); /* Légère pression du bouton quand on clique */
+  box-shadow: none;
 }
 
 div.flex.justify-center.p-8 {
@@ -1229,6 +1255,8 @@ div.flex.justify-center.p-8 {
   background: rgba(0, 255, 255, 0.5);
   box-shadow: 0 0 25px rgba(0, 255, 255, 1);
   transform: scale(1.1);
+  color: #005bbc;
+  cursor: pointer;
 }
 
 div.avis {
@@ -1384,12 +1412,28 @@ div.avis {
   padding: 10px;
 }
 
+
 .nav0 a {
-  text-decoration: none;
   color: white;
   font-size: 18px;
-  transition: color 0.3s;
+  font-weight: 500;
+  letter-spacing: 0.5px;
+  transition: 
+    color 0.3s ease,
+    text-shadow 0.3s ease;
+  position: relative;
+  text-transform: uppercase;
+  cursor: pointer;
 }
+
+.nav0 a:hover {
+  color: #d9f0ff;
+  text-shadow: 0 0 5px #d9f0ff, 0 0 10px #d9f0ff;
+}
+
+
+
+
 
 /* Drawer styles */
 .drawer-button {
@@ -1513,5 +1557,5 @@ button.drawer-button {
 
   header.navbar {
     background: none;
-}
+  }
 }
